cabal-version:      2.4
name:               rlc
version:            0.1.0.0
synopsis:           raylang compiler. 

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             lonelyfloat
maintainer:         cephhead_prsnl@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rlc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        process,
        directory
    hs-source-dirs:   src
    default-language: Haskell2010
